# SSHKotlic

./: CMakeLists.txt  LICENSE  README.md  callbacks.c  callbacks.h  concurrent.c  concurrent.h  container.c  container.h  db.sqlite3  generate.c  generate.h  logging.c  logging.h  lookup.c  lookup.h  main.c  main.h  manage.py  name.txt  package-lock.json  package.json  shutdown.c  shutdown.h  vite.config.js
DjangoRazvezljan/: asgi.py  settings.py  urls.py  wsgi.py
accounts/: forms.py  urls.py  views.py
datapot/: apps.py  documents.py  models.py  serializers.py  urls.py  views.py
src/: App.vue  main.js  main.ts
src/assets/: main.css
src/components/: menu_bar.vue
src/router/: index.ts
src/views/: Analysis.vue  BashPlayback.vue  Dashboard.vue  Logs.vue  MovingMenu.vue  Pathway.vue  Signin.vue  Statistics.vue
